Fikset coordinatsystem templating
